[package]
name = "trace2pprof"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
edition = "2018"

[dependencies]
bytes = "0.4.7"
flate2 = "1.0.13"
structopt = "0.3.4"
sequence_trie = "0.3.6"
string-interner = "0.7.1"
prost = "0.5.0"

[build-dependencies]
prost-build = { version = "0.5.0" }
